@@ -1709,6 +1709,167 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testReferenceDecrementIllegally
+specifier|public
+name|void
+name|testReferenceDecrementIllegally
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+operator|.
+name|setMergeScheduler
+argument_list|(
+operator|new
+name|ConcurrentMergeScheduler
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|SearcherManager
+name|sm
+init|=
+operator|new
+name|SearcherManager
+argument_list|(
+name|writer
+argument_list|,
+literal|false
+argument_list|,
+operator|new
+name|SearcherFactory
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|sm
+operator|.
+name|maybeRefreshBlocking
+argument_list|()
+expr_stmt|;
+name|IndexSearcher
+name|acquire
+init|=
+name|sm
+operator|.
+name|acquire
+argument_list|()
+decl_stmt|;
+name|IndexSearcher
+name|acquire2
+init|=
+name|sm
+operator|.
+name|acquire
+argument_list|()
+decl_stmt|;
+name|sm
+operator|.
+name|release
+argument_list|(
+name|acquire
+argument_list|)
+expr_stmt|;
+name|sm
+operator|.
+name|release
+argument_list|(
+name|acquire2
+argument_list|)
+expr_stmt|;
+name|acquire
+operator|=
+name|sm
+operator|.
+name|acquire
+argument_list|()
+expr_stmt|;
+name|acquire
+operator|.
+name|getIndexReader
+argument_list|()
+operator|.
+name|decRef
+argument_list|()
+expr_stmt|;
+name|sm
+operator|.
+name|release
+argument_list|(
+name|acquire
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|sm
+operator|.
+name|acquire
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"acquire should have thrown an IllegalStateException since we modified the refCount outside of the manager"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalStateException
+name|ex
+parameter_list|)
+block|{
+comment|//
+block|}
+comment|// sm.close(); -- already closed
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 DECL|method|testEnsureOpen
 specifier|public
 name|void
