@@ -674,6 +674,29 @@ argument_list|)
 return|;
 block|}
 block|}
+annotation|@
+name|Override
+DECL|method|getRefCount
+specifier|protected
+name|int
+name|getRefCount
+parameter_list|(
+name|SearcherAndTaxonomy
+name|reference
+parameter_list|)
+block|{
+return|return
+name|reference
+operator|.
+name|searcher
+operator|.
+name|getIndexReader
+argument_list|()
+operator|.
+name|getRefCount
+argument_list|()
+return|;
+block|}
 block|}
 end_class
 
